# Rendering_Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
DND_Lib/src/: CMakeLists.txt  Character.cpp  InitiativeList.h
DND_Lib/test/: CMakeLists.txt  CharacterTests.cpp  test_main.cpp
cmake/: HunterGate.cmake
cmake/Hunter/: config.cmake
docs/pumls/: Application.puml  GlobalConstants.puml  Model.puml  Overall.puml  UniformBufferObject.puml  Vertex.puml  VulkanImageManager.puml  VulkanMemoryManager.puml  VulkanResourceManager.puml  puml_gen.sh  template.puml
resources/models/: debug_cube.mtl  debug_plane.mtl  ship.mtl
resources/models/cathedral/source/: combined02.mtl
resources/models/the-porcelain-room/source/: model.mtl
shaders/: depth.vert  glC.sh  glCompile.ps1  textured.frag  triangle_application.vert  vertex_buffer.vert
src/: CMakeLists.txt  main.cpp
src/includes/: Shader_Helper.h
src/shaders/: triangles.frag  triangles.vert
vulk_src/: Application.cpp  Application.h  CMakeLists.txt  CommonIncludes.h  ExternalHeaders.h  ExternalIncludes.h  Model.cpp  Model.h  TriangleApplication.cpp  TriangleApplication.h  Triangleapplication.cpp  Triangleapplication.h  UniformBufferObject.hpp  Vertex.cpp  Vertex.h  VulkanImageManager.cpp  VulkanImageManager.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  main.cpp
vulk_src/review_notes/: Rendering Advancements.md  depth_buffering_notes.md  drawing_notes.md  mipmaps_notes.md  smattering_notes.md  stories.md  texture_notes.md  uniform_buffers_notes.md  vertex_buffer_notes.md
vulk_src/review_notes/Shading/: Light Sources.md  Shading Model.md
vulk_src/review_notes/Transform Operations/: Geometry Cache Playback.md  Vertex_Morphing.md  projections.md  vertex_blending.md
vulk_src/review_notes/Tutorial Notes/: pipeline_notes.md  present_notes.md  setup_notes.md  swap_chain_recreation_notes.md
vulk_src/review_notes/Vulkan/: Memory Management.md  Shader Resource Binding.md  ShaderInputData.md  ShaderInputQuickRef.md
